# hebrew-calendar-qml

./: .gitignore  CMakeLists.txt  README  README.md  hebrew-calendar-qml.pro  hebrew-calendar.apparmor  index.html  manifest.json.in  params.json
HebrewCalendar/: DayBaseComponent.qml  DayHeaderComponent.qml  DayView.qml  HeaderDateComponent.qml  HebrewCalendar.apparmor  HebrewCalendar.desktop  HebrewCalendar.pro  LocationDialog.qml  Main.qml  MonthComponent.qml  MonthComponentDateDelegate.qml  MonthView.qml  OmerPopUp.qml  Settings.qml  SettingsView.qml  TimeLineHeader.qml  YearView.qml  YearViewDelegate.qml  timeCalc.js
app/: CMakeLists.txt  DayBaseComponent.qml  DayHeader.qml  DayView.qml  LocationDialog.qml  Main.qml  MonthComponent.qml  MonthComponentDateDelegate.qml  MonthView.qml  Settings.qml  SettingsView.qml  ViewHeader.qml  YearView.qml  YearViewDelegate.qml  hebrew-calendar-qml.desktop.in  hebrew-calendar.desktop.in
app/tests/autopilot/: run
app/tests/autopilot/hebrew-calendar-qml/main/: __init__.py  test_main.py
app/tests/autopilot/hebrew-calendar/main/: test_main.py
backend/: CMakeLists.txt
backend/HebrewCalendar/: HebrewCalendar.pro  backend.cpp  backend.h  hebdate.cpp  hebdate.h  omerFullStr.cpp  omerFullStr.h  qmldir
backend/modules/HebrewCalendar/: hebdate.cpp  hebdate.h
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
libhdate-1.6.02-source/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  USE  aclocal.m4  configure  configure.in  libhdate.pc.in
libhdate-1.6.02-source/bindings/: Makefile.am  Makefile.in
libhdate-1.6.02-source/bindings/pascal/: Makefile.am  Makefile.in  Package.fpc  changelog  fpc_README  hdate.pp  hdate_dyn_pascal.pp
libhdate-1.6.02-source/bindings/perl/: Makefile.am  Makefile.in  hdate.i
libhdate-1.6.02-source/bindings/php/: Makefile.am  Makefile.in  hdate.i  hdate.ini
libhdate-1.6.02-source/bindings/python/: Makefile.am  Makefile.in  hdate.i
libhdate-1.6.02-source/bindings/ruby/: Makefile.am  Makefile.in
libhdate-1.6.02-source/docs/: Makefile.in
libhdate-1.6.02-source/docs/man/: Makefile.in
libhdate-1.6.02-source/docs/man/man1/: Makefile.am  Makefile.in  hcal.1  hdate.1
libhdate-1.6.02-source/docs/man/man3/: Makefile.am  Makefile.in  hdate.3  hdate.h.3  hdate_Hdate.3  hdate_struct.3  hdatepp.h.3
libhdate-1.6.02-source/examples/: Makefile.am  Makefile.in
libhdate-1.6.02-source/examples/bindings/: Makefile.am  Makefile.in  hdate_c.c  hdate_cpp.cpp  hdate_pas.pas  hdate_perl.pl  hdate_php.php  hdate_python.py  hdate_ruby.rb
libhdate-1.6.02-source/examples/bindings/pascal/: Makefile.am  Makefile.in  hdate_class.pp  hdate_obj.pp  hdate_pascal.pp
libhdate-1.6.02-source/examples/hcal/: Makefile.am  Makefile.in  hcal.c  hdate.c  local_functions.c
libhdate-1.6.02-source/po/: ChangeLog  POTFILES.in  es_MX.gmo  es_MX.po  fr.gmo  fr.po  he.gmo  he.po  libhdate.pot  ru.gmo  ru.po  sv.gmo  sv.po
libhdate-1.6.02-source/src/: hdate_strings.c
libhdate/libhdate_arm-linux-gnueabihf/usr/lib/arm-linux-gnueabihf/: libhdate.so.1.0.6
libhdate/libhdate_i386-linux-gnu/usr/lib/i386-linux-gnu/: libhdate.so.1.0.6
libhdate/libhdate_x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/: libhdate.so.1  libhdate.so.1.0.6
libhdate/locale/es_MX/LC_MESSAGES/: libhdate.mo
libhdate/locale/fr/LC_MESSAGES/: libhdate.mo
libhdate/locale/he/LC_MESSAGES/: libhdate.mo
libhdate/locale/ru/LC_MESSAGES/: libhdate.mo
libhdate/locale/sv/LC_MESSAGES/: libhdate.mo
libhdate_arm-linux-gnueabihf/usr/lib/arm-linux-gnueabihf/: libhdate.so.1.0.6
libhdate_i386-linux-gnu/usr/lib/i386-linux-gnu/: libhdate.so.1.0.6
libhdate_x86_64-linux-gnu/usr/lib/arm-linux-gnueabihf/: libhdate.so.1.0.6
po/: he.po  hebrew-calendar-qml.avisoftware.pot  hebrew-calendar.avisoftware.pot  template.pot
